--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.1",
     "mongoose": "^7.0.3"
   }
 }
